--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "styled-components": "^6.1.12",
+    "uuid": "^11.0.3",
     "vite-tsconfig-paths": "^5.0.1",
     "zod": "^3.23.8"
   },
