--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixoree",
   "private": false,
-  "homepage": "https://pixoree.github.io/",
+  "homepage": "https://colxi.info/pixoree/",
   "version": "0.0.2",
   "type": "module",
   "scripts": {
