--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,15 +16,19 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+        # extract `engines.node` from package.json and save it to output
+      - name: Get Node.JS version from package.json
+        id: get-versions
+        run: echo ::set-output name=node::$(jq -r .engines.node ./package.json)
+
+      - name: Use Node.js ${{steps.get-versions.outputs.node}}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{steps.get-versions.outputs.node}}
 
       - name: Install PNPM
         run: npm i -g pnpm
