--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,8 +36,8 @@ jobs:
         with:
           node-version: ${{steps.get-node-version.outputs.node}}
 
-      - name: Install PNPM
-        run: npm i -g pnpm@${{steps.get-node-version.outputs.node}}
+      - name: Install PNPM {{steps.get-pnpm-version.outputs.node}}
+        run: npm i -g pnpm@${{steps.get-pnpm-version.outputs.node}}
 
       - name: Build app
         run: |
