--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "0.0.2",
   "type": "module",
   "scripts": {
+    "test": "jest",
     "dev": "vite",
     "build": "tsc --build && vite build --base=./",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -25,6 +26,11 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^2.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -36,8 +42,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   },
