chore: add testing capabilities

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Build app
         run: |
+          node --version
           pnpm i
           pnpm i gh-pages
           pnpm run build
