--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,9 +13,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [20.0]
 
     steps:
       - uses: actions/checkout@v4
