--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,11 +6,12 @@ name: Node.js CI
 on:
   push:
     branches: ['main']
-  pull_request:
-    branches: ['main']
+  # pull_request:
+  #   branches: ['main']
 
 jobs:
   build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
