--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "license": "MIT-advertising",
   "homepage": "https://colxi.info/pixoree/",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha",
   "type": "module",
   "scripts": {
     "test": "jest",
