chore: test workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: ${{steps.get-node-version.outputs.node}}
 
       - name: Test
-        uses: ./shared/test.yml
+        uses: ./github/workflows/shared/test.yml
 
       - name: Install PNPM ${{steps.get-pnpm-version.outputs.node}}
         run: npm i -g pnpm@${{steps.get-pnpm-version.outputs.node}}
