--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,6 @@ jobs:
         with:
           node-version: ${{steps.get-node-version.outputs.node}}
 
-      - name: Test
-        uses: ./github/workflows/shared/test.yml
-
       - name: Install PNPM ${{steps.get-pnpm-version.outputs.node}}
         run: npm i -g pnpm@${{steps.get-pnpm-version.outputs.node}}
 
@@ -40,6 +37,9 @@ jobs:
 
       - name: Run tests
         run: pnpm test
+
+      - name: Run linter
+        run: pnpm lint
 
       - name: Build app
         run: pnpm run build
