--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -39,5 +39,8 @@ jobs:
       - name: Run tests
         run: pnpm test
 
+      - name: Run linter
+        run: pnpm lint
+
       - name: Build app
         run: pnpm run build
