--- a/package.json
+++ b/package.json
@@ -18,15 +18,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "eslint-plugin-jest": "^28.10.0",
-    "eslint-plugin-react": "^7.37.3",
     "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "uuid": "^11.0.3",
-    "vite-tsconfig-paths": "^5.0.1"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "vite-tsconfig-paths": "^5.0.1",
     "@stylistic/eslint-plugin": "^2.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -41,10 +39,13 @@
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^28.10.0",
     "eslint-plugin-json-format": "^2.0.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsonc-eslint-parser": "^2.4.0",
