--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,7 @@
     "es2021": true,
     "jest/globals": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react-hooks/recommended"],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module",
@@ -76,6 +72,14 @@
     "react/jsx-no-useless-fragment": "error",
     "react/hook-use-state": "error",
     "react/jsx-closing-bracket-location": ["error", "tag-aligned"],
-    "react/jsx-closing-tag-location": ["error", "tag-aligned"]
+    "react/jsx-closing-tag-location": ["error", "tag-aligned"],
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "TSEnumDeclaration > TSEnumMember > Literal",
+        "message": "Use a string union type instead of enum."
+      }
+    ],
+    "@typescript-eslint/explicit-member-accessibility": "error"
   }
 }
