--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "license": "MIT-advertising",
   "homepage": "https://colxi.info/pixoree/",
   "version": "0.0.6-alpha",
+  "pre-commit": [
+    "updateCommitId"
+  ],
   "type": "module",
   "scripts": {
     "test": "jest",
@@ -12,7 +15,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
-    "type-check": "tsc -b"
+    "type-check": "tsc -b",
+    "updateCommitId": "node updateVersion.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
